--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,17 @@
     background-repeat: round;
     display: inline-block;
 }
+label {
+    margin: 0 40px 0 0;
+    font-size: 26px;
+    line-height: 70px;
+    display: none;
+    width: 26px;
+    float: right;
+}
+#toggle {
+    display: none;
+}
 .div_logo{
     height: 20%;
     width: 12%;
@@ -51,15 +62,13 @@
     
     height: 20px;
     width: 38%;
-    margin: -2.8% 0% 0% 54.6%;
+    margin: -2.8% 0% 0% 55.6%;
 }
 
 .home_1{
     list-style-type: none;
     display: inline-block;
-    margin: 0% 0% 0% -8%;
-    
-    
+    margin: 0% 0% 0% -8%; 
 }
 nav div ul li a{
     text-decoration: none;
@@ -83,7 +92,7 @@ li{
 .dicover{
     height: 93px;
     width: 50%;
-    margin: 2% 0% 0% 27.1%;
+    margin: 2% 0% 0% 31.1%;
 }
 .p_dicover{
     display: inline-block;
@@ -120,6 +129,29 @@ li{
     padding: 14px 14px 14px 34px;
     border-radius: 30px;
     box-shadow:  0 0 3px black;
+
+}
+@media only screen and (max-width: 1300px) {
+    label {
+        display: block;
+        cursor: pointer;
+    }
+    .logo{
+        height: 50%;
+        width: 50%;
+        margin: 1% 0% 0% 5%;
+        display: inline-block;
+    }
+    .home_1{
+        text-align: center;
+        width: 100%;
+        display: none;
+    }
+    .home_1 a{
+        text-align: center;
+        width: 100%;
+        display: none;
+    }
 
 }
 
@@ -179,7 +211,7 @@ li{
     display: flex;
 }
 .input_button{
-    margin: -3.8% 0% 0% 63%;
+    margin: -2.9% 0% 0% 63%;
     padding: 18px 60px 18px 60px;
     font-size: 13px;
     border-radius: 10px;
@@ -191,7 +223,7 @@ li{
 #badr{
     font-size: 27px;
     color: white;
-    margin: -3.9% 0% 0% 63%;
+    margin: -3.1% 0% 0% 63%;
     display: flex;
 }
 .footer{
@@ -334,7 +366,7 @@ li{
 .div_h1{
     height: 20%;
     width: 100%;
-    margin: 0% 0 0% 0%;
+    margin: 15% 0 0% 0%;
 }
 .div_links{
     height: 15%;
@@ -377,7 +409,7 @@ a{
     list-style-type: none;
     color: #bfbebe;
 }
-.contact{
+.contact3{
     width: 76%;
     height: 367px;
     display: flex;
@@ -391,7 +423,7 @@ a{
     font-size: 25px;
     font-family: 'Roboto', sans-serif;
     color: #879aab;
-    margin: 0px 0% 0% 28%;
+    margin: 29px 0% 0% 28%;
 }
 .div_contact{
     width: 100%;
